tests/baselines/reference/genericFunctionCallSignatureReturnTypeMismatch.errors.txt
==== tests/cases/compiler/genericFunctionCallSignatureReturnTypeMismatch.ts (1 errors) ====
    interface Array<T> {}
    
    var f : { <T>(x:T): T; }
    
    var g : { <S>() : S[]; };
    f = g;
    
    var s = f("str").toUpperCase();
    
    console.log(s);
    ~~~~~~~
!!! genericFunctionCallSignatureReturnTypeMismatch.ts(10,1): error TS2095: Could not find symbol 'console'.
    